--- a/auth_service/dockerfile
+++ b/auth_service/dockerfile
@@ -39,4 +39,4 @@ COPY shared/ shared/
 COPY auth_service/ auth_service/
 
 #cmd run 1 command 
-CMD ["uvicorn", "auth_service.app.main:app", "--host", "0.0.0.0", "--port", "8001"]
+CMD ["uvicorn", "auth_service.app.main:app", "--host", "0.0.0.0", "--port", "8001", "--root-path", "/auth"]
