--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ python-dateutil==2.9.0.post0
 annotated-types==0.7.0
 psycopg2-binary==2.9.10
 pydantic-settings==2.3.4
-httpx=0.28.1
+httpx==0.28.1
 pandas
+
 
